Most of the pages are designed and select coffee and add to basket

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -1,1 +1,19 @@
-<header>Header</header>
+<link rel="stylesheet" href="../css/components/header.css" />
+<header class="navi-{{theme}}-skin header">
+<header class="navi-light-skin">
+  <div class="nav-Left">
+    <img src="../icon/logo.jpg" alt="" />
+  </div>
+  <div class="nav-Right">
+    <div class="menue">
+      <ul>
+        <li><a href="">Shop</a></li>
+        <li><a href="">Herkunft</a></li>
+        <li><a class="active" href="">das Caf'e</a></li>
+      </ul>
+    </div>
+    <div class="shopIcon">
+      <img src="../icon/Shop Icon.jpg" alt="" />
+    </div>
+  </div>
+</header>
