--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,8 +1,12 @@
+*{
+  box-sizing: border-box;
+}
 body {
-  background: grey;
+  font-family: Roboto, sans-serif;
+  margin: 0px;
 
   @media (min-width: 768px) {
-    color: red;
+    color: white;
   }
 }
 
@@ -19,11 +23,35 @@ main {
   }
 }
 
-img {
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* img {
   max-width: 100%;
   height: auto;
+} */
+
+h1 {
+  font-weight: var(--h1-font-weight);
 }
 
 h2 {
   font-size: var(--h2-font-size);
+  font-weight: var(--h2-font-weight);
 }
