--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,9 @@
 @import "variables.css";
 @import "base.css";
 @import "components/hero.css";
+@import "components/header.css";
+@import "components/footer.css";
+@import "layout/footer.css";
+@import "layout/header.css";
+@import "pages/home.css";
+@import "pages/the-cafe.css";
